// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection Details test Renders connection details for prometheus datasource 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiCallOut euiCallOut--primary"
    >
      <div
        class="euiCallOutHeader"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon--inherit euiCallOutHeader__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 11.508 7.468 8H6.25V7h2.401l.03 3.508H9.8v1H7.5Zm-.25-6.202a.83.83 0 0 1 .207-.577c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 0 1-.207-.568ZM8 13A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm0 1A6 6 0 1 1 8 2a6 6 0 0 1 0 12Z"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="euiCallOutHeader__title"
        >
          Configurations may be managed elsewhere.
        </span>
      </div>
      <div
        class="euiText euiText--small"
      >
        <div
          class="euiTextColor euiTextColor--default"
        >
          Access to data may be managed in other systems outside of OpenSearch. Check with your administrator for additional configurations.
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiText euiText--medium"
          >
            <h2
              class="panel-title"
            >
              Data source configurations
            </h2>
            Control configurations for your data source.
          </div>
        </div>
      </div>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Data source name
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                prom
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Data source description
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                -
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Prometheus URI
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                localhost:9201
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiSpacer euiSpacer--l"
    />
  </div>
</body>
`;

exports[`Connection Details test Renders connection details for s3 datasource 1`] = `
<body>
  <div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiCallOut euiCallOut--primary"
    >
      <div
        class="euiCallOutHeader"
      >
        <svg
          aria-hidden="true"
          class="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiCallOutHeader__icon"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
        <span
          class="euiCallOutHeader__title"
        >
          Configurations may be managed elsewhere.
        </span>
      </div>
      <div
        class="euiText euiText--small"
      >
        <div
          class="euiTextColor euiTextColor--default"
        >
          Access to data may be managed in other systems outside of OpenSearch. Check with your administrator for additional configurations.
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiPanel euiPanel--paddingMedium euiPanel--borderRadiusMedium euiPanel--plain euiPanel--hasShadow"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiText euiText--medium"
          >
            <h2
              class="panel-title"
            >
              Data source configurations
            </h2>
            Control configurations for your data source.
          </div>
        </div>
      </div>
      <hr
        class="euiHorizontalRule euiHorizontalRule--full euiHorizontalRule--marginLarge"
      />
      <div
        class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Data source name
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                mock_data_source
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Data source description
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                -
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem"
        >
          <div
            class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
          >
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Index store region
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                us-west-2
              </div>
            </div>
            <div
              class="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                class="euiText euiText--medium overview-title"
              >
                Index store URI
              </div>
              <div
                class="euiText euiText--small overview-content"
              >
                y
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiSpacer euiSpacer--l"
    />
    <div
      class="euiSpacer euiSpacer--l"
    />
  </div>
</body>
`;
